# breadboard

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  tags
.cargo/: config.toml
.github/workflows/: pr_check.yml
application/: Cargo.toml  build.rs
application/src/: lib.rs
embedded/: Cargo.toml
embedded/.cargo/: config.toml
embedded/src/: ili9488.rs  lib.rs  main.rs  red_screen.rs  xpt2046.rs
hardware/: #auto_saved_files#  _autosave-hardware.kicad_sch  hardware.kicad_pro  hardware.kicad_sch  ~hardware.kicad_sch.lck
ili9488/: Cargo.toml
ili9488/src/: lib.rs
red_screen/: Cargo.toml
red_screen/src/: lib.rs
src/: app.rs  background.rs  breadboard.rs  ch446.rs  controller.rs  lib.rs  main.rs  model.rs  selection.rs  touchscreen.rs  view.rs  view_model.rs
src/ch446/: defmt.rs  web.rs
touchscreen/: Cargo.toml  README.md
touchscreen/src/: lib.rs  red_screen.rs  web_screen.rs
web/: Cargo.toml  index.html
web/src/: lib.rs  touchscreen.rs
xpt2046/: Cargo.toml
xtask/src/: main.rs
