[workspace]
members = ["web", "embedded", "xpt2046", "ili9488"]
resolver = "2"

[package]
name = "application"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.7.0"
embedded-graphics-core = "0.3.3"
embedded-hal = "1.0.0-rc.1"
embedded-hal-bus = "0.1.0-rc.1"
hash32 = "0.2.1"
heapless = "0.7.16"
num_enum = { version = "0.7.1", default-features = false }
defmt = { version = "0.3", optional = true }

[features]
embedded = ["dep:defmt"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
