[workspace]
members = ["ili9488", "application", "xtask"]
resolver = "2"

[workspace.dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-hal = "1.0.0-rc.1"
touchscreen = { git = "https://github.com/tommy-gilligan/touchscreen.git" }
embedded-graphics-web-simulator = "^0.3.0"
wasm-bindgen = "0.2.88"
web-sys = { version = "^0.3.64", features = [ 'Document', 'Element', 'HtmlElement', 'MouseEvent', 'Window' ] }
embedded-hal-bus = "0.1.0-rc.1"
ili9488 = { path = "ili9488" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
fugit = "0.3.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-boot2 = "0.3"
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", features=["rt", "critical-section-impl", "eh1_0_alpha"] }
embedded-hal-mock = { version = "0.10.0-rc.1", features = ["eh1"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
