[workspace]
members = ["ili9488"]
resolver = "2"

[package]
name = "application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-hal = "1.0.0-rc.1"

[target.'cfg(not(target_os = "none"))'.dependencies]
embedded-graphics-web-simulator = "^0.3.0"
wasm-bindgen = "0.2.88"
web-sys = { version = "^0.3.64", features = [ 'Document', 'Element', 'HtmlElement', 'MouseEvent', 'Window' ] }
touchscreen = { version = "0.1.0", features = ["web-screen"] }

[target.'cfg(target_os = "none")'.dependencies]
embedded-hal-bus = "0.1.0-rc.1"
ili9488 = { path = "ili9488" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
fugit = "0.3.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-boot2 = "0.3"
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", features=["rt", "critical-section-impl", "eh1_0_alpha"] }
touchscreen = { version = "0.1.0", features = ["red-screen"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
