[package]
name = "touchscreen"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics-core.workspace = true

embedded-hal = { workspace = true, optional = true }
xpt2046 = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, optional = true }
embedded-graphics-web-simulator = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
red-screen = ["dep:embedded-hal", "dep:xpt2046"]
web-screen = ["dep:wasm-bindgen", "dep:embedded-graphics-web-simulator", "dep:web-sys"]
